; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/io/extr_vlapic.c_vlapic_timer_divisor.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/io/extr_vlapic.c_vlapic_timer_divisor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [42 x i8] c"vlapic_timer_divisor: invalid dcr 0x%08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @vlapic_timer_divisor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlapic_timer_divisor(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = and i32 %4, 11
  switch i32 %5, label %14 [
    i32 135, label %6
    i32 132, label %7
    i32 130, label %8
    i32 128, label %9
    i32 133, label %10
    i32 131, label %11
    i32 129, label %12
    i32 134, label %13
  ]

6:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %17

7:                                                ; preds = %1
  store i32 2, i32* %2, align 4
  br label %17

8:                                                ; preds = %1
  store i32 4, i32* %2, align 4
  br label %17

9:                                                ; preds = %1
  store i32 8, i32* %2, align 4
  br label %17

10:                                               ; preds = %1
  store i32 16, i32* %2, align 4
  br label %17

11:                                               ; preds = %1
  store i32 32, i32* %2, align 4
  br label %17

12:                                               ; preds = %1
  store i32 64, i32* %2, align 4
  br label %17

13:                                               ; preds = %1
  store i32 128, i32* %2, align 4
  br label %17

14:                                               ; preds = %1
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @xhyve_abort(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %15)
  br label %17

17:                                               ; preds = %6, %7, %8, %9, %10, %11, %12, %13, %14
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @xhyve_abort(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
